syntax = "proto3";

package user;
option go_package = "user_services/pb/user";

// User Service - Manages authentication and user data
service UserService {
  // Get user by ID
  rpc GetUser(GetUserRequest) returns (UserResponse);
  
  // Validate user token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Get user role information
  rpc GetUserRole(GetUserRoleRequest) returns (UserRoleResponse);
}

message GetUserRequest {
  uint32 id = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message GetUserRoleRequest {
  uint32 user_id = 1;
}

message UserResponse {
  uint32 id = 1;
  string email = 2;
  uint32 role_id = 3;
  string role_name = 4;
}

message ValidateTokenResponse {
  bool valid = 1;
  uint32 user_id = 2;
  string email = 3;
  string role = 4;
}

message UserRoleResponse {
  uint32 role_id = 1;
  string role_name = 2;
}
